load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

exports_files([
    "lief_sources.bzl",
    "node_javascript.bzl",
    "node_sources.bzl",
    "openssl_sources.bzl",
    "release_archive.bzl",
    "repositories.bzl",
    "v8_requirements.txt",
    "versions.bzl",
])

cc_binary(
    name = "release_mtree",
    srcs = ["release_mtree.c"],
    visibility = ["//visibility:public"],
)
