load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

exports_files([
    "lief_sources.bzl",
    "node_addon.bzl",
    "node_javascript.bzl",
    "node_sources.bzl",
    "node_test_getaddrinfo.c",
    "node_test_getaddrinfo.map",
    "node_test_runner.py",
    "node_test.sh",
    "node_test_shards.bzl",
    "openssl_sources.bzl",
    "release_archive.bzl",
    "repositories.bzl",
    "v8_requirements.txt",
    "versions.bzl",
])

cc_binary(
    name = "release_mtree",
    srcs = ["release_mtree.c"],
    visibility = ["//visibility:public"],
)
