load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "source_contract_test",
    srcs = ["source_contract_test.sh"],
    args = [
        "$(rootpath @nodejs_26_3_1//:bazel/release_metadata.json)",
        "$(rootpath @nodejs_26_3_1//:configure.py)",
        "$(rootpath @nodejs_26_3_1//:common.gypi)",
        "$(rootpath @nodejs_26_3_1//:node.gyp)",
    ],
    data = [
        "@nodejs_26_3_1//:bazel/release_metadata.json",
        "@nodejs_26_3_1//:common.gypi",
        "@nodejs_26_3_1//:configure.py",
        "@nodejs_26_3_1//:node.gyp",
    ],
)
