module(
    name = "nodejs_integration_test",
    version = "0.0.0",
)

bazel_dep(name = "nodejs", version = "0.0.0")
bazel_dep(name = "llvm", version = "0.8.8")
bazel_dep(name = "rules_shell", version = "0.6.1")

archive_override(
    module_name = "llvm",
    integrity = "sha256-sSr0NUsY06DQwPoxgh+drMpOkeG/N7Lx+KxWkZTFUDM=",
    strip_prefix = "hermetic-llvm-85d29dc776702879eb9cbcbe560428df7fd24e64",
    urls = ["https://github.com/hermeticbuild/hermetic-llvm/archive/85d29dc776702879eb9cbcbe560428df7fd24e64.tar.gz"],
)

local_path_override(
    module_name = "nodejs",
    path = "../..",
)

nodejs = use_extension("@nodejs//nodejs:extensions.bzl", "nodejs")
nodejs.version(version = "26.3.1")
use_repo(nodejs, "nodejs_26_3_1")
